--- a/src/Bell.css
+++ b/src/Bell.css
@@ -4,6 +4,14 @@
     padding: 4px;
 }
 
+@keyframes bell-wobble {
+    0% { padding: 4px 4px 4px 4px; }
+    25% { padding: 4px 40px 4px 4px; }
+    50% { padding: 4px 4px 4px 4px; }
+    75% { padding: 4px 4px 4px 40px; }
+    100% { padding: 4px 4px 4px 4px; }
+}
+
 .striker-button {
     font-size: x-large;
     margin: 12px;
