settable fm parameters

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 .App {
   text-align: center;
-  margin: 36px;
-}
-
-.App-header {
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 12px 12px 12px 12px;
+  padding: 4px;
 }
