--- a/src/Bell.css
+++ b/src/Bell.css
@@ -1,6 +1,36 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+}
+
+.bell-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #ffffff;
+    min-width: 420px;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+.title {
+    font-size: 2em;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #333333;
+    margin-bottom: 20px;
+}
+
 .bell-icon {
-    font-size: xxx-large;
-    margin: 48px 12px 48px 12px;
+    font-size: 8rem;
+    margin: 24px 12px;
     padding: 4px;
 }
 
@@ -15,5 +45,43 @@
 .striker-button {
     font-size: x-large;
     margin: 12px;
-    padding: 12px 28px 12px 28px;
+    padding: 12px 28px;
+    border: none;
+    background-color: #4285f4;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.striker-button:hover {
+    background-color: #2a75f3;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 40px;
+}
+
+.input-field {
+    margin-bottom: 10px;
+}
+
+.input-container label {
+    font-size: 1.25em;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #333333;
+    margin-bottom: 5px;
+}
+
+.input-container input {
+    width: 80px;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
 }
