--- a/src/Bell.css
+++ b/src/Bell.css
@@ -12,11 +12,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #ffffff;
+    background: #f0f0f0;
     min-width: 420px;
     padding: 30px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    border: 1px solid #cccccc;
+    border-radius: 2px;
 }
 
 .title {
@@ -47,7 +47,7 @@ body {
     margin: 12px;
     padding: 12px 28px;
     border: none;
-    background-color: #4285f4;
+    background-color: #252525;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -55,7 +55,7 @@ body {
 }
 
 .striker-button:hover {
-    background-color: #2a75f3;
+    background-color: darkgoldenrod;
 }
 
 .input-container {
